--- a/src/app/ui/components/home/home.component.scss
+++ b/src/app/ui/components/home/home.component.scss
@@ -374,6 +374,7 @@ body {
       
 
       .category-card {
+        text-decoration: none;
         cursor: pointer;
         flex: 0 0 auto;
         width: 205px;
