--- a/src/app/ui/components/category/category.component.html
+++ b/src/app/ui/components/category/category.component.html
@@ -11,7 +11,7 @@
 
     <!-- Category Header -->
     <div class="card mb-4 border-0" style="background-color:#333333;">
-      <div class="row g-0" style="max-height: 300px;">
+      <div class="row g-0" style="height: 300px;">
         <!-- Text content on the left -->
         <div class="col-7 d-flex align-items-center text-white">
           <div class="p-3 p-md-4" >
