--- a/src/app/ui/components/home/home.component.html
+++ b/src/app/ui/components/home/home.component.html
@@ -42,7 +42,7 @@
     </button>
     
     <div class="category-grid" #categoryGrid>
-      <div class="category-card" *ngFor="let category of mainCategories" [routerLink]="['/'+category.id]">
+      <a class="category-card" *ngFor="let category of mainCategories" [routerLink]="['/'+category.id]">
         <div class="category-image">
           <img [src]="category.categoryImage?.url" [alt]="category.name">
         </div>
@@ -50,7 +50,7 @@
           <h3 class="category-title">{{ category.name }}</h3>
           <!-- <p class="category-description" *ngIf="!isMobile" >{{ category.title || 'Ürünlerimizi keşfedin' }}</p> -->
         </div>
-      </div>
+      </a>
     </div>
     
     <button class="scroll-btn right" (click)="scrollCategories('right')">
