--- a/src/app/ui/components/product/product-card/product-card.component.scss
+++ b/src/app/ui/components/product/product-card/product-card.component.scss
@@ -15,7 +15,8 @@ $link-color: #0000ee;
 
 .product-card {
   font-family: $font-family-base;
-  
+  text-decoration: none;
+  color: inherit;
   display: flex;
   flex-direction: column;
   min-height: 450px;
