--- a/src/app/ui/components/product/product-detail/product-detail.component.html
+++ b/src/app/ui/components/product/product-detail/product-detail.component.html
@@ -4,6 +4,7 @@
   <app-breadcrumb></app-breadcrumb>
 </div>
 
+<!-- Loading Skeleton -->
 <div *ngIf="!product" class="product-skeleton">
   <div class="image-skeleton"></div>
   <div class="info-skeleton">
@@ -16,52 +17,71 @@
     <div class="button-skeleton"></div>
   </div>
 </div>
+
+<!-- Product Detail -->
 <div *ngIf="product" class="product-detail-container">
+  <!-- Product Images -->
   <div class="product-image-gallery">
     <div class="main-image" (click)="toggleImageZoom()">
       <img [src]="product.productImageFiles && product.productImageFiles.length > 0 && currentImageIndex >= 0 ? 
-                  product.productImageFiles[currentImageIndex].url : defaultProductImageUrl" [alt]="product.name"
-        [class.zoomed]="isImageZoomed">
+                  product.productImageFiles[currentImageIndex].url : defaultProductImageUrl" 
+           [alt]="product.name"
+           [class.zoomed]="isImageZoomed">
+      
+      <!-- Image Navigation -->
       <div class="image-navigation" *ngIf="product.productImageFiles && product.productImageFiles.length > 1">
         <button class="nav-button" (click)="prevImage($event)" [disabled]="currentImageIndex === 0">❮</button>
         <button class="nav-button" (click)="nextImage($event)"
           [disabled]="currentImageIndex === product.productImageFiles.length - 1">❯</button>
       </div>
     </div>
+    
+    <!-- Thumbnails -->
     <div class="thumbnail-list" *ngIf="product.productImageFiles && product.productImageFiles.length > 1">
-      <div *ngFor="let image of product.productImageFiles; let i = index" class="thumbnail"
-        [class.active]="i === currentImageIndex" (click)="selectImage(i)">
+      <div *ngFor="let image of product.productImageFiles; let i = index" 
+           class="thumbnail"
+           [class.active]="i === currentImageIndex" 
+           (click)="selectImage(i)">
         <img [src]="image.url" [alt]="product.name">
       </div>
     </div>
   </div>
 
+  <!-- Product Information -->
   <div class="product-info">
+    <!-- Product Header -->
     <p class="product-display">
       <a class="product-brand" [routerLink]="['/'+product.brandId]">{{product.brandName}}</a>
       {{product.name}}
       {{product.title}}
     </p>
+    
+    <!-- Like Button -->
     <div class="like-button-container">
       <button class="Btn" [class.liked]="product?.isLiked" (click)="toggleLike($event, product)">
         <span class="leftContainer">
-          <svg fill="white" viewBox="0 0 512 512" height="1em" xmlns="http://www.w3.org/2000/svg"><path d="M47.6 300.4L228.3 469.1c7.5 7 17.4 10.9 27.7 10.9s20.2-3.9 27.7-10.9L464.4 300.4c30.4-28.3 47.6-68 47.6-109.5v-5.8c0-69.9-50.5-129.5-119.4-141C347 36.5 300.6 51.4 268 84L256 96 244 84c-32.6-32.6-79-47.5-124.6-39.9C50.5 55.6 0 115.2 0 185.1v5.8c0 41.5 17.2 81.2 47.6 109.5z"></path></svg>
+          <svg fill="white" viewBox="0 0 512 512" height="1em" xmlns="http://www.w3.org/2000/svg">
+            <path d="M47.6 300.4L228.3 469.1c7.5 7 17.4 10.9 27.7 10.9s20.2-3.9 27.7-10.9L464.4 300.4c30.4-28.3 47.6-68 47.6-109.5v-5.8c0-69.9-50.5-129.5-119.4-141C347 36.5 300.6 51.4 268 84L256 96 244 84c-32.6-32.6-79-47.5-124.6-39.9C50.5 55.6 0 115.2 0 185.1v5.8c0 41.5 17.2 81.2 47.6 109.5z"></path>
+          </svg>
         </span>
         <span class="likeCount">
           {{ likeCount | number }}
         </span>
       </button>
     </div>
+    
+    <!-- Price and SKU -->
     <p class="product-price">{{formatCurrency(product.price)}}</p>
     <p class="product-sku">SKU: {{product.sku}}</p>
 
+    <!-- Product Features -->
     <div *ngFor="let featurePair of allFeatures | keyvalue" class="product-feature-selector">
-      <!-- Özellik Adı -->
+      <!-- Feature Name -->
       <h3>{{featurePair.key}}</h3>
       
-      <!-- Özellik Değerleri -->
+      <!-- Feature Values -->
       <div class="feature-options">
-        <!-- Görsel Özellikler için (Renk gibi) -->
+        <!-- Visual Features (like Color) -->
         <ng-container *ngIf="visualFeatures.includes(featurePair.key.toLowerCase()); else regularFeature">
           <button *ngFor="let featureValue of featurePair.value" 
                   class="feature-button visual-feature-button"
@@ -74,7 +94,7 @@
           </button>
         </ng-container>
         
-        <!-- Normal Özellikler için (Örn: Boyut, ozellik1, ozellik2) -->
+        <!-- Regular Features -->
         <ng-template #regularFeature>
           <button *ngFor="let featureValue of featurePair.value" 
                   class="feature-button"
@@ -86,15 +106,19 @@
       </div>
     </div>
     
+    <!-- Add to Cart Section -->
     <div class="add-to-cart-section">
       <div class="quantity-selector">
         <button (click)="decreaseQuantity()">-</button>
         <input type="number" [(ngModel)]="quantity" min="1" max="10">
         <button (click)="increaseQuantity()">+</button>
       </div>
-      <button class="product-add-to-cart-button" [disabled]="!isProductAvailable(product)" (click)="addToCart(product)">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" 
-          stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="cart-icon">
+      <button class="product-add-to-cart-button" 
+              [disabled]="!isProductAvailable(product)" 
+              (click)="addToCart(product)">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" 
+             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" 
+             class="cart-icon">
           <circle cx="9" cy="21" r="1"></circle>
           <circle cx="20" cy="21" r="1"></circle>
           <path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path>
@@ -103,10 +127,10 @@
       </button>
     </div>
   </div>
-  <div class="ivirzivir">
-  </div>
+  <!-- <div class="space"></div> -->
 </div>
 
+<!-- Product Detail Tabs -->
 <div class="product-detail-tabs">
   <ul class="tab-headers">
     <li class="tab-header" [class.active]="activeTab === 'description'" (click)="setActiveTab('description')">
@@ -123,6 +147,7 @@
   </div>
 </div>
 
+<!-- Related Products -->
 <section class="products">
   <app-product-grid 
     *ngIf="randomProducts"
